@@ -204,6 +204,9 @@
       <div class="heading h3">
         <a href="#dom.blinktitle">DOM.blinkTitle</a>
       </div>
+      <div class="heading h3">
+        <a href="#dom.cookiesupport">DOM.cookieSupport</a>
+      </div>
       <div class="heading h2">
         <a href="#helper-methods">Helper methods</a>
       </div>
@@ -2815,6 +2818,58 @@ If a signle string is provided, the title will alternate between '!!!'
         </td>
       </tr>
       <tr>
+        <td class="docs"><div class="dox">
+  <div class="summary">
+<div class="pilwrap" id="dom.cookiesupport">
+  <h3>
+    <a href="#dom.cookiesupport" class="pilcrow">&#182;</a>
+    DOM.cookieSupport
+  </h3>
+</div>
+
+  </div>
+  <div class="body"><p>Tests for cookie support</p>
+  </div>
+  <div class="details">
+    <div class="dox_tag_title">Returns</div>
+    <div class="dox_tag_detail">
+      <span class="dox_tag_name"></span>
+      <span class="dox_type">boolean</span>
+      <span class="dox_type">null</span>
+      <span>The type of support for cookies. Values:
+
+<ul>
+<li>null: no cookies</li>
+<li>false: only session cookies</li>
+<li>true: session cookies and persistent cookies (although
+  the browser might clear them on exit)</li>
+</ul>
+
+Kudos: <a href='http://stackoverflow.com/questions/2167310/'>http://stackoverflow.com/questions/2167310/</a>
+       how-to-show-a-message-only-if-cookies-are-disabled-in-browser</span>
+    </div>
+  </div>
+</div>
+        </td>
+        <td class="code highlight"><div class="highlight"><pre>    <span class="nx">DOM</span><span class="p">.</span><span class="nx">cookieSupport</span> <span class="o">=</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
+        <span class="kd">var</span> <span class="nx">c</span><span class="p">,</span> <span class="nx">persist</span><span class="p">;</span>
+        <span class="nx">persist</span> <span class="o">=</span> <span class="kc">true</span><span class="p">;</span>
+        <span class="k">do</span> <span class="p">{</span>
+            <span class="nx">c</span> <span class="o">=</span> <span class="s1">&#39;gCStest=&#39;</span> <span class="o">+</span> <span class="nb">Math</span><span class="p">.</span><span class="nx">floor</span><span class="p">(</span><span class="nb">Math</span><span class="p">.</span><span class="nx">random</span><span class="p">()</span><span class="o">*</span><span class="mi">100000000</span><span class="p">);</span>
+            <span class="nb">document</span><span class="p">.</span><span class="nx">cookie</span> <span class="o">=</span> <span class="nx">persist</span> <span class="o">?</span> <span class="nx">c</span> <span class="o">+</span>
+                <span class="s1">&#39;;expires=Tue, 01-Jan-2030 00:00:00 GMT&#39;</span> <span class="o">:</span> <span class="nx">c</span><span class="p">;</span>
+
+            <span class="k">if</span> <span class="p">(</span><span class="nb">document</span><span class="p">.</span><span class="nx">cookie</span><span class="p">.</span><span class="nx">indexOf</span><span class="p">(</span><span class="nx">c</span><span class="p">)</span> <span class="o">!==</span> <span class="o">-</span><span class="mi">1</span><span class="p">)</span> <span class="p">{</span>
+                <span class="nb">document</span><span class="p">.</span><span class="nx">cookie</span><span class="o">=</span> <span class="nx">c</span> <span class="o">+</span> <span class="s1">&#39;;expires=Sat, 01-Jan-2000 00:00:00 GMT&#39;</span><span class="p">;</span>
+                <span class="k">return</span> <span class="nx">persist</span><span class="p">;</span>
+            <span class="p">}</span>
+        <span class="p">}</span> <span class="k">while</span> <span class="p">(</span><span class="o">!</span><span class="p">(</span><span class="nx">persist</span> <span class="o">=</span> <span class="o">!</span><span class="nx">persist</span><span class="p">));</span>
+
+        <span class="k">return</span> <span class="kc">null</span><span class="p">;</span>
+    <span class="p">};</span></pre></div>
+        </td>
+      </tr>
+      <tr>
         <td class="docs">
 <div class="pilwrap" id="helper-methods">
   <h2>
@@ -2905,7 +2960,7 @@ Kudos: <a href='http://stackoverflow.com/questions/1060008/'>http://stackoverflo
       <tr>
         <td class="docs">
 <div class="pilwrap">
-  <a class="pilcrow" href="#section-85" id="section-85">&#182;</a>
+  <a class="pilcrow" href="#section-86" id="section-86">&#182;</a>
 </div>
 <p>If event is defined as one from event Map.</p>
         </td>
@@ -2915,7 +2970,7 @@ Kudos: <a href='http://stackoverflow.com/questions/1060008/'>http://stackoverflo
       <tr>
         <td class="docs">
 <div class="pilwrap">
-  <a class="pilcrow" href="#section-86" id="section-86">&#182;</a>
+  <a class="pilcrow" href="#section-87" id="section-87">&#182;</a>
 </div>
 <p>Or use the hidden property.</p>
         </td>
@@ -2925,7 +2980,7 @@ Kudos: <a href='http://stackoverflow.com/questions/1060008/'>http://stackoverflo
       <tr>
         <td class="docs">
 <div class="pilwrap">
-  <a class="pilcrow" href="#section-87" id="section-87">&#182;</a>
+  <a class="pilcrow" href="#section-88" id="section-88">&#182;</a>
 </div>
 <p>Call the callback, if defined.</p>
         </td>
@@ -2945,7 +3000,7 @@ Kudos: <a href='http://stackoverflow.com/questions/1060008/'>http://stackoverflo
       <tr>
         <td class="docs">
 <div class="pilwrap">
-  <a class="pilcrow" href="#section-88" id="section-88">&#182;</a>
+  <a class="pilcrow" href="#section-89" id="section-89">&#182;</a>
 </div>
 <p>Visibility standard detected.</p>
         </td>
@@ -2961,7 +3016,7 @@ Kudos: <a href='http://stackoverflow.com/questions/1060008/'>http://stackoverflo
       <tr>
         <td class="docs">
 <div class="pilwrap">
-  <a class="pilcrow" href="#section-89" id="section-89">&#182;</a>
+  <a class="pilcrow" href="#section-90" id="section-90">&#182;</a>
 </div>
 <p>All others.</p>
         </td>
