@@ -2,6 +2,7 @@
 
 ## 0.12.13 (current)
 - `PARSE.stringifyAll()` checks for type (fix bug with strings).
+- `DOM.cookieSupport()` checks for cookie support in browser.
 
 ## 0.10.12
 - `PARSE.parse()` refactor.
